<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.Operator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#000000">

        <TextView
            android:id="@+id/brainTrainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/brain_trainer"
            android:textColor="#fcd500"
            android:textSize="60dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:onClick="addition"
            android:text="@string/addition" />

        <Button
            android:id="@+id/subButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="40sp"
            android:layout_weight="1"
            android:onClick="subtraction"
            android:text="@string/subtraction" />

        <Button
            android:id="@+id/multiButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="40sp"
            android:layout_weight="1"
            android:text="@string/multiplication" />

        <Button
            android:id="@+id/divButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/division" />
        <Button
            android:id="@+id/mixedButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/mixed_problem" />





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>