<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.Level_Selection">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#31a4aa">

    <TextView
        android:id="@+id/brainTrainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/brain_trainer"
        android:textColor="#fcd500"
        android:layout_weight="1"
        android:textSize="60dp"
        android:textAlignment="center"
        android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radiogroup_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:layout_margin="10dp"
            >

            <RadioButton
                android:id="@+id/warmupRadio"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/warmup"
                android:textSize="40sp"
                android:onClick="onRadioButtonClicked"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/easyRadio"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/easy"
                android:textSize="40sp"
                android:onClick="onRadioButtonClicked"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/mediumRadio"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/medium"
                android:textSize="40sp"
                android:onClick="onRadioButtonClicked"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/hardRadio"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/hard"
                android:textSize="40sp"
                android:onClick="onRadioButtonClicked"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/toughRadio"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/tough"
                android:textSize="40sp"
                android:onClick="onRadioButtonClicked"
                android:layout_weight="1" />

        </RadioGroup>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>